--- a/src/components/footer/footer.css
+++ b/src/components/footer/footer.css
@@ -82,7 +82,7 @@ line-height: normal;
 }
 
 input[type="email"] {
-    background-image: url('../Assets/navbar/email.svg');
+    /* background-image: url('../Assets/navbar/email.svg'); */
     background-size: 19px;
     background-position: 10px center;
     background-repeat: no-repeat;
