--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,11 +1,15 @@
-/* Navbar.css */
 .navbar {
   display: flex;
   justify-content: space-between;
   align-items: center;
   background: #FFF;
   box-shadow: 0px 4px 4px 0px rgba(199, 199, 199, 0.25);
-  padding: 0px 100px;
+  padding: 6px;
+  position: fixed;
+  z-index: 100;
+  width: 100%;
+  top: 0;
+  left: 0;
 }
 
 .navbar-logo img {
@@ -15,11 +19,12 @@
 .navbar-links {
   list-style: none;
   display: flex;
-  gap: 40px;
+  gap: 10px;
 }
 
 .navbar-item {
   margin-right: 20px;
+  text-decoration: none;
 }
 
 .navbar-item a {
@@ -32,6 +37,14 @@
   line-height: normal;
 }
 
+.navbat-buttons {
+  justify-content: space-around;
+  display: flex;
+  align-items: center;
+  text-align: center;
+}
+
+
 .login-button,
 .signup-button {
   width: 90px;
@@ -40,7 +53,7 @@
   align-items: center;
   border-radius: 7px;
   background: #FFF;
-  border: 1.3px solid  #3D3DFF;
+  border: 1.3px solid #3D3DFF;
   color: #3D3DFF;
   font-weight: 500;
   font-family: 'Poppins', sans-serif;
