--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,6 +1,6 @@
 .navbar {
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   align-items: center;
   background: #FFF;
   box-shadow: 0px 4px 4px 0px rgba(199, 199, 199, 0.25);
@@ -12,8 +12,14 @@
   left: 0;
 }
 
-.navbar-logo img {
-  height: 35px;
+.navbar ul {
+  list-style: none;
+  display: flex;
+  gap: 20px;
+}
+
+.menu-button {
+  display: none;
 }
 
 .navbar-links {
@@ -63,4 +69,149 @@
   background-color: #3D3DFF;
   color: #FFF;
   margin-left: 40px;
+}
+
+/* Media query for mobile devices (max-width: 767px) */
+@media (max-width: 700px) {
+  .navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: fixed;
+    padding: 13px 2px;
+  }
+  .home-wrapper {
+    position: relative;
+    display: flex;
+    margin-top: 53px;
+}
+.rectangle-parent .group-child {
+  height: 350px;
+  width: auto;
+  object-fit: cover;
+}
+
+  .dropdown {
+    position: relative;
+  }
+
+  /* Display the Menu button for mobile devices */
+  .menu-button {
+    display: flex;
+    transform: translate(-100px), 0px;
+    outline: none;
+    border-radius: 7px;
+    height: 30px;
+    width: 30px;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    border: none;
+  }
+
+  .navbar-logo {
+    display: none;
+  }
+
+  .navbar ul {
+    border-radius: 10px;
+    display: inline-grid;
+    gap: 20px;
+    padding: 10px;
+    justify-content: center;
+}
+
+  .menu-button:hover .dropdwon-content {
+    display: block;
+  }
+
+  .dropdown-content {
+    position: absolute;
+    background-color: #fff;
+    min-width: 160px;
+    box-shadow: 0px 5px 0px 0px rgba(0, 0, 0, 0.2);
+    z-index: 1;
+    opacity: 0;
+    pointer-events: none;
+    transform: translate(-10px);
+    transition: opacity 0.3s, transform 0.6s;
+    text-align: start;
+    width: 600px;
+  }
+
+  .dropdown-content.show {
+    opacity: 2;
+    pointer-events: auto;
+    transform: translate(-9px, 9px);
+  }
+
+  .frame-parent2 {
+    flex-wrap: wrap;
+    padding: 10px;
+    align-items: center;
+  }
+
+  .group-parent {
+    width: 155px;
+  }
+
+  .safar-family-wrapper {
+    color: #1E1D4C;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 10px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+  }
+
+  .child-class {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: #FFF;
+    text-align: center;
+    font-family: Poppins;
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 600;
+    line-height: normal;
+    text-transform: capitalize;
+    width: 100%;
+    height: 70%;
+  }
+
+  .submit-button {
+    gap: 15px;
+    flex-wrap: wrap;
+    width: auto;
+    justify-content: center;
+    display: flex;
+    align-items: center;
+    padding: 15px;
+    text-align: center;
+  }
+
+  .submit-button input {
+    width: 270px;
+    height: 50px;
+    border-radius: 10px;
+    background: var(--white, #FFF);
+    outline: none;
+    border: none;
+  }
+
+  .contact {
+    font-size: 10px;
+  }
+
+  .email {
+    font-size: 10px;
+  }
+
+  .footer-logo img {
+    height: 40px;
+    width: 70px;
+  }
 }
