--- a/src/page/login/login.css
+++ b/src/page/login/login.css
@@ -1,4 +1,4 @@
-.login-container {
+/* .login-container {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -34,11 +34,11 @@
     border: 1.5px solid black;
     border-radius: 3px;
     text-transform: none; /* Remove automatic capitalization */
-    outline: none;
+    /* outline: none; */
 
-  }
+  /* } */
   
-  button {
+  /* button {
     width: 96%;
     background-color: #007bff;
     color: #fff;
@@ -48,26 +48,25 @@
     cursor: pointer;
     transition: background-color 0.3s;
   }
-  
-  button:hover {
+   */
+  /* button:hover {
     background-color: #0056b3;
   }
-  
+   */
 
   /* ... Previous styles ... */
 
-.login-form {
+/* .login-form {
     background-color: #fff;
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
     width: 300px;
     opacity: 0; /* Start with opacity set to 0 */
-    transform: translateY(20px); /* Start with a 20px vertical offset */
-    animation: fadeInUp 0.5s ease-in-out 0.3s forwards; /* Animation for fade-in and slide up */
-  }
-  
-  @keyframes fadeInUp {
+    /* transform: translateY(20px); Start with a 20px vertical offset */
+    /* animation: fadeInUp 0.5s ease-in-out 0.3s forwards; Animation for fade-in and slide up */
+  /* } */
+  /* @keyframes fadeInUp {
     0% {
       opacity: 0;
       transform: translateY(20px);
@@ -76,7 +75,7 @@
       opacity: 1;
       transform: translateY(0);
     }
-  }
+  } */
   
   /* ... Other styles ... */
   
