--- a/src/page/signup/signup.css
+++ b/src/page/signup/signup.css
@@ -6,7 +6,7 @@
   }
   
   .signup-form {
-    background-color: #fff;
+    background-color: #fff; 
     padding: 20px;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
@@ -29,16 +29,16 @@
     font-weight: bold;
   }
   
-  input[type="text"],
-  input[type="email"],
-  input[type="password"] {
-    width: 93%;
-    padding: 8px;
-    margin-bottom: 10px;
-    border: 1px solid black;
-    border-radius: 3px;
-    outline: none;
-  }
+    /* input[type="text"],
+    input[type="email"],
+    input[type="password"] {
+      width: 93%;
+      padding: 8px;
+      margin-bottom: 10px;
+      border: 1px solid black;
+      border-radius: 3px;
+      outline: none;
+    } */
   
   button {
     width: 100%;
