--- a/src/components/packages/packages.css
+++ b/src/components/packages/packages.css
@@ -1,3 +1,27 @@
+.navbar.hide-navbar {
+    transform: translateY(-100%);
+    transition: transform 0.3s ease;
+  }
+  
+  /* Style for the "single-content-nav" when it becomes fixed */
+  .single-content-nav.fixed-nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background-color: #fff; /* Set the background color you desire */
+    z-index: 999;
+    /* Your styles for the fixed navigation bar */
+  }
+
+  
+
+/* Adjust the height based on your requirements */
+.single-content-nav {
+    top: 70px; /* Set the desired distance from the top of the viewport */
+    height: 50px; /* Set the desired height */
+}
+
 .destination {
     background-image: url('../Assets//navbar/travel7.jpg');
     background-position: center;
@@ -15,9 +39,11 @@
     transform: translate(20px, 280px);
     width: 360px;
 }
+
 .btn-box .signup-button {
     width: 170px;
 }
+
 .fa-solid {
     margin-right: 10px;
 }
@@ -33,12 +59,13 @@
 
 /* single-content css  */
 
-.tour-detail .single-content{
-    padding: 30px 30px 0px 30px;
+.tour-detail .single-content {
+    padding: 20px;
 }
+
 .single-content-nav ul {
     display: flex;
-    gap: 30px;
+    gap: 15px;
     align-items: center;
     justify-content: flex-start;
     padding: 0 30px 0 30px;
@@ -52,6 +79,8 @@
     text-decoration: none;
     font-size: 16px;
     color: black;
+    padding: 20px;
+    margin: 5px;
 }
 
 .single-content-nav ul li a.active {
@@ -63,9 +92,18 @@
     transform: translateX(-50%) scale(1);
 } */
 
-.tour-details {
-    padding: 10px 20px 20px 30px;
+.all-package-details1 .tour-details {
+    padding: 10px 5px 10px 5px;
     background: #fff;
+    margin: 1rem;
+    display: inline-flex;
+    flex-wrap: wrap;
+}
+
+.tour-details {
+    padding: 10px 5px 10px 5px;
+    background: #fff;
+    margin: 1rem;
 }
 
 .tour-details h3 {
@@ -128,17 +166,24 @@
 
 }
 
-.all-package-details {
-    flex-wrap: wrap;
+.all-package-details2,
+.all-package-details1 {
+    margin: 1rem;
+    justify-content: space-between;
+    align-items: center;
     display: flex;
+    flex-wrap: wrap;
+
 }
 
-.all-package-details .tour-details {
+.all-package-details1 .tour-details {
     gap: 20px;
-    display: flex;
 }
 
 /*  Description */
+.description .tour-details {
+    width: 100%;
+}
 
 .description .tour-details .duration-t h3 {
     font-size: 30px;
@@ -149,9 +194,6 @@
     width: 100%;
 }
 
-.tour-details .duration-tt {
-    width: 100%;
-}
 
 /* inquiry form css */
 /* Add your custom styles to style.css or your preferred CSS file */
@@ -232,6 +274,7 @@ button[type="submit"]:hover {
     display: flex;
     background: #fff;
     padding: 10px;
+    width: 100%;
 }
 
 .tour-detail .container {
@@ -278,12 +321,15 @@ button[type="submit"]:hover {
     margin: 30px 0 30px 0;
     justify-content: space-between;
 }
+
 .main-hightlight3 {
     margin-right: 80px;
 }
+
 .main-hightlight2 {
     padding: 20px;
 }
+
 .highlight {
     display: flex;
     align-items: center;
@@ -298,15 +344,11 @@ button[type="submit"]:hover {
     border-radius: 50%;
 }
 
-.duration-tt .main-hightlight1,
-.duration-tt .main-hightlight3 {
+.duration-tt .main-hightlight1 {
     padding: 20px;
 }
 
-.tour-details-EI {
-    display: flex;
-    gap: 270px;
-}
+
 
 .main-hightlight1 .highlight .hight-dot-circle,
 .main-hightlight3 .highlight .hight-dot-circle {
@@ -325,19 +367,25 @@ button[type="submit"]:hover {
     width: 800px;
     height: 350px;
 }
+
 .tour-details .tour-itinary .duration-tt .itinary-details {
     gap: 20px;
     padding: 10px;
     margin-top: 20px;
     border: 0px solid;
     border-radius: 7px;
-    width: 800px;
+    width: auto;
+    margin: 20px;
     box-shadow: rgba(0, 0, 0, 0.02) 0px 1px 3px 0px, rgba(27, 31, 35, 0.15) 0px 0px 0px 1px;
 }
-.packages-images {
-    width: 800px;
-    height: 500px;
+
+.tour-details-EI {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
 }
+
+
 .itinary-details span h1 {
     color: black;
     font-size: 18px;
@@ -372,9 +420,11 @@ button[type="submit"]:hover {
     cursor: pointer;
     align-items: center;
 }
+
 .itinary-details span .itinarary-down-icon {
     transform: rotateZ(-180deg);
 }
+
 /* Itinarary */
 
 
@@ -396,7 +446,7 @@ button[type="submit"]:hover {
 
 .all-photoes-trip {
     gap: 5px;
-    width: 790px;
+    width: 800px;
     display: flex;
     overflow: auto;
     height: 500px;
@@ -410,5 +460,248 @@ button[type="submit"]:hover {
 .all-photoes-trip img {
     object-fit: cover;
     width: 790px;
-    height: 500px; 
+    height: 500px;
+}
+
+@media (max-width: 960px) {
+    .itinary-details {
+        width: 220px;
+    }
+
+    .tour-details-inquiry {
+        background: #fff;
+        padding: 5px;
+        width: 100%;
+        display: grid;
+    }
+
+
+
+    .itinary-details span .dropdown-content {
+        font-size: 14px;
+        justify-content: space-around;
+        width: 559px;
+        position: fixed;
+    }
+
+    .single-content {
+        margin: 1rem;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        overflow: auto;
+    }
+
+    .single-content-nav ul li a {
+        text-decoration: none;
+        font-size: 16px;
+        color: black;
+        padding: 20px;
+
+    }
+
+    .single-content-nav ul li a.active {
+        color: #287dfa;
+    }
+
+    .tour-detail .single-content {
+        padding: 20px;
+    }
+
+    /* Photo css */
+    .packages-images {
+        justify-content: center;
+        align-items: center;
+        display: flex;
+    }
+
+    .all-photoes-trip {
+        gap: 5px;
+        width: 820px;
+        display: flex;
+        overflow: auto;
+        height: 500px;
+        border-radius: 8px;
+    }
+
+
+
+    .all-photoes-trip img {
+        object-fit: cover;
+        width: 820px;
+        height: 500px;
+    }
+
+    .tour-details {
+        padding: 10px 5px 10px 5px;
+        background: #fff;
+        margin: 0.3rem;
+    }
+
+    .inquiry-form,
+    .inquiry-form1,
+    .inquiry-form2,
+    .inquiry-form3 {
+        margin-bottom: 20px;
+    }
+
+}
+
+@media (max-width: 667px) {
+    .itinary-details {
+        width: 220px;
+    }
+
+    .tour-details-inquiry {
+        background: #fff;
+        padding: 5px;
+        width: 100%;
+        display: grid;
+    }
+
+
+
+    .itinary-details span .dropdown-content {
+        font-size: 14px;
+        justify-content: space-around;
+        width: 559px;
+        position: fixed;
+    }
+
+    .single-content {
+        margin: 1rem;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        overflow: auto;
+    }
+
+    .single-content-nav ul li a {
+        text-decoration: none;
+        font-size: 16px;
+        color: black;
+        padding: 20px;
+
+    }
+
+    .single-content-nav ul li a.active {
+        color: #287dfa;
+    }
+
+    .tour-detail .single-content {
+        padding: 20px;
+    }
+
+    /* Photo css */
+    .all-photoes-trip {
+        gap: 5px;
+        width: 600px;
+        display: flex;
+        overflow: auto;
+        height: 500px;
+        border-radius: 8px;
+    }
+
+
+
+    .all-photoes-trip img {
+        object-fit: cover;
+        width: 600px;
+        height: 500px;
+    }
+
+    .tour-details {
+        padding: 10px 5px 10px 5px;
+        background: #fff;
+        margin: 0.3rem;
+    }
+
+    .inquiry-form,
+    .inquiry-form1,
+    .inquiry-form2,
+    .inquiry-form3 {
+        margin-bottom: 20px;
+    }
+
+}
+
+@media (max-width: 400px) {
+
+    .tour-details-inquiry {
+        background: #fff;
+        padding: 5px;
+        width: 100%;
+        display: grid;
+    }
+
+
+
+    .itinary-details span .dropdown-content {
+        font-size: 14px;
+        justify-content: space-around;
+        width: 559px;
+        position: fixed;
+    }
+
+    .single-content {
+        margin: 1rem;
+        display: flex;
+        justify-content: flex-start;
+        align-items: center;
+        overflow: auto;
+    }
+
+    .single-content-nav ul li a {
+        text-decoration: none;
+        font-size: 16px;
+        color: black;
+        padding: 20px;
+
+    }
+
+    .single-content-nav ul li a.active {
+        color: #287dfa;
+    }
+
+    .tour-detail .single-content {
+        padding: 20px;
+    }
+
+    /* Photo css */
+    .all-photoes-trip {
+        gap: 5px;
+        width: 300px;
+        display: flex;
+        overflow: auto;
+        height: 400px;
+        border-radius: 8px;
+    }
+
+    .tour-itinary {
+        width: 300px;
+    }
+
+    .tour-itinary .duration-tt {
+        width: 300px;
+    }
+
+    .all-photoes-trip img {
+        object-fit: cover;
+        width: 300px;
+        height: 400px;
+    }
+
+    .tour-details {
+        padding: 10px 5px 10px 5px;
+        background: #fff;
+        margin: 0.3rem;
+    }
+
+    .inquiry-form,
+    .inquiry-form1,
+    .inquiry-form2,
+    .inquiry-form3 {
+        margin-bottom: 20px;
+    }
+
 }
